--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
   android:layout_height="match_parent"
   tools:context=".controller.MainActivity">
 
-  <ImageView
-    android:id="@+id/image"
+  <androidx.fragment.app.FragmentContainerView
+    android:id="@+id/nav_host_fragment"
     android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:scaleType="fitCenter"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_height="0dp"
+    android:name="edu.cnm.deepdive.nasaapod.controller.CalendarFragment"
+    app:layout_constraintBottom_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:ignore="ContentDescription"/>
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
