--- a/app/src/main/res/layout/day_calendar.xml
+++ b/app/src/main/res/layout/day_calendar.xml
@@ -2,8 +2,8 @@
 <TextView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  style="@style/TextAppearance.Material3.BodyLarge"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:gravity="center"
+  android:textAppearance="@style/CalendarTextAppearance"
   tools:text="31"/>
