--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -13,6 +13,7 @@
     android:layout_height="wrap_content"
     app:cv_scrollPaged="true"
     app:cv_dayViewResource="@layout/day_calendar"
+    app:cv_monthHeaderResource="@layout/header_calendar"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
