--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,6 +33,18 @@
 
   </fragment>
 
+  <fragment
+    android:id="@+id/settings_fragment"
+    android:name="edu.cnm.deepdive.nasaapod.controller.SettingsFragment"
+    android:label="Settings"
+    tools:layout="@layout/fragment_settings" />
+
+  <fragment
+    android:id="@+id/favorites_fragment"
+    android:name="edu.cnm.deepdive.nasaapod.controller.FavoritesFragment"
+    android:label="Favorites"
+    tools:layout="@layout/fragment_favorites" />
+
 
 </navigation>
 
