--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
   <fragment
     android:id="@+id/calendar_fragment"
     android:label="@string/app_name"
-    android:name="edu.cnm.deepdive.nasaapod.controller.CalendarFragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.CalendarFragment"
     tools:layout="@layout/fragment_calendar">
 
     <action
@@ -24,7 +24,7 @@
 
   <fragment
     android:id="@+id/image_fragment"
-    android:name="edu.cnm.deepdive.nasaapod.controller.ImageFragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.ImageFragment"
     tools:layout="@layout/fragment_image">
 
     <argument
@@ -35,13 +35,13 @@
 
   <fragment
     android:id="@+id/settings_fragment"
-    android:name="edu.cnm.deepdive.nasaapod.controller.SettingsFragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.SettingsFragment"
     android:label="Settings"
     tools:layout="@layout/fragment_settings" />
 
   <fragment
     android:id="@+id/favorites_fragment"
-    android:name="edu.cnm.deepdive.nasaapod.controller.FavoritesFragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.FavoritesFragment"
     android:label="Favorites"
     tools:layout="@layout/fragment_favorites" />
 
