--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/main"
+  android:id="@+id/main_activity"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".controller.MainActivity">
+  android:layout_height="match_parent">
 
+  <!-- Toolbar -->
+  <com.google.android.material.appbar.MaterialToolbar
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:title="@string/app_name"
+    app:layout_constraintTop_toTopOf="parent"/>
+
+  <!-- Navigation Host -->
   <androidx.fragment.app.FragmentContainerView
     android:id="@+id/nav_host_fragment"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="0dp"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:defaultNavHost="true"
     app:navGraph="@navigation/nav_graph"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"/>
-
-  <!-- Random Button for fetching random APODs -->
-  <Button
-    android:id="@+id/random_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/fetch_random_apods"
-    app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"/>
-
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
