--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,12 +3,12 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:orientation="vertical">
+  android:orientation="vertical"
+  android:padding="8dp">
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/favorites_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp" />
+    android:layout_height="match_parent"/>
 
 </LinearLayout>
