--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,53 +1,77 @@
 <navigation
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  app:startDestination="@id/calendar_fragment">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/nav_graph"
+  app:startDestination="@id/pre_login_fragment">
 
+  <action
+    android:id="@+id/navigate_to_settings_fragment"
+    app:destination="@id/settings_fragment"/>
+
+  <action
+    android:id="@+id/navigate_to_pre_login_fragment"
+    app:destination="@+id/pre_login_fragment"/>
+
+  <!-- PreLoginFragment -->
   <fragment
-    android:id="@+id/calendar_fragment"
-    android:label="@string/app_name"
-    android:name="edu.cnm.deepdive.spaceseek.controller.CalendarFragment"
-    tools:layout="@layout/fragment_calendar">
-
+    android:id="@+id/pre_login_fragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.PreLoginFragment"
+    tools:layout="@layout/fragment_pre_login">
     <action
-      android:id="@+id/show_image"
-      app:destination="@id/image_fragment">
-
-      <argument
-        android:name="apod_id"
-        app:argType="long"/>
-
-    </action>
-
+      android:id="@+id/navigate_to_login_fragment"
+      app:destination="@id/login_fragment"/>
+    <action
+      android:id="@+id/navigate_to_image_fragment"
+      app:destination="@id/image_fragment"/>
   </fragment>
 
+  <!-- LoginFragment -->
+  <fragment
+    android:id="@+id/login_fragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.LoginFragment"
+    tools:layout="@layout/fragment_login">
+    <action
+      android:id="@+id/navigate_to_image_fragment"
+      app:destination="@id/image_fragment"/>
+  </fragment>
+
+  <!-- ImageFragment (Main Content or Home) -->
   <fragment
     android:id="@+id/image_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.ImageFragment"
     tools:layout="@layout/fragment_image">
-
-    <argument
-      android:name="apod_id"
-      app:argType="long"/>
-
+    <action
+      android:id="@+id/navigate_to_calendar_fragment"
+      app:destination="@id/calendar_fragment"/>
+    <action
+      android:id="@+id/navigate_to_favorites_fragment"
+      app:destination="@id/favorites_fragment"/>
   </fragment>
 
+  <!-- CalendarFragment -->
   <fragment
-    android:id="@+id/settings_fragment"
-    android:name="edu.cnm.deepdive.spaceseek.controller.SettingsFragment"
-    android:label="Settings"
-    tools:layout="@layout/fragment_settings" />
+    android:id="@+id/calendar_fragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.CalendarFragment"
+    tools:layout="@layout/fragment_calendar">
+    <action
+      android:id="@+id/navigate_to_image_fragment"
+      app:destination="@id/image_fragment"/>
+  </fragment>
 
+  <!-- FavoritesFragment -->
   <fragment
     android:id="@+id/favorites_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.FavoritesFragment"
-    android:label="Favorites"
-    tools:layout="@layout/fragment_favorites" />
+    tools:layout="@layout/fragment_favorites">
+    <action
+      android:id="@+id/navigate_to_image_fragment"
+      app:destination="@id/image_fragment"/>
+  </fragment>
 
-
+  <!-- SettingsFragment -->
+  <fragment
+    android:id="@+id/settings_fragment"
+    android:name="edu.cnm.deepdive.spaceseek.controller.SettingsFragment"
+    tools:layout="@layout/fragment_settings"/>
 </navigation>
-
-
-  <!--android:name=  asks what fragments we have-->
-  <!--android:label=appname in gradleResValues.xml-->
