--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,9 @@
     android:id="@+id/bottom_navigation_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"/>
-  <!--    TODO 3/29/25 Add app:menu attr to refer to menu resource-->
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:menu="@menu/main_nav"
+    />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/show_random"
