--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,8 @@
   android:id="@+id/nav_graph"
   app:startDestination="@id/pre_login_fragment">
 
+  <!-- Step 1: App starts at PreLoginFragment -->
+
   <action
     android:id="@+id/navigate_to_settings_fragment"
     app:destination="@id/settings_fragment"/>
@@ -18,37 +20,41 @@
     android:id="@+id/navigate_to_image_fragment"
     app:destination="@id/image_fragment"/>
 
-  <!-- PreLoginFragment -->
+  <!-- PreLoginFragment: Checks login status -->
   <fragment
     android:id="@+id/pre_login_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.PreLoginFragment"
     tools:layout="@layout/fragment_pre_login">
+    <!-- Step 2: If user is not logged in, navigate to LoginFragment -->
     <action
       android:id="@+id/navigate_to_login_fragment"
       app:destination="@id/login_fragment"
       app:popUpTo="@id/nav_graph"/>
+    <!--  If user is logged in, navigate directly to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
       app:popUpTo="@id/nav_graph"/>
   </fragment>
 
-  <!-- LoginFragment -->
+  <!-- LoginFragment: Handles user login  -->
   <fragment
     android:id="@+id/login_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.LoginFragment"
     tools:layout="@layout/fragment_login">
+    <!-- Step 3: After successful login, navigate to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
       app:popUpTo="@id/nav_graph"/>
   </fragment>
 
-  <!-- ImageFragment (Main Content) -->
+  <!-- ImageFragment: Main Content screen -->
   <fragment
     android:id="@+id/image_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.ImageFragment"
     tools:layout="@layout/fragment_image">
+    <!-- Step 4: User can navigate to other sections from here -->
     <action
       android:id="@+id/navigate_to_favorites_fragment"
       app:destination="@+id/favorites_fragment"
@@ -68,6 +74,7 @@
     android:id="@+id/calendar_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.CalendarFragment"
     tools:layout="@layout/fragment_calendar">
+    <!-- Step 5: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
@@ -83,6 +90,7 @@
       android:name="list_type"
       app:argType="edu.cnm.deepdive.spaceseek.controller.ListFragment$ListType"
       android:defaultValue="FAVORITES"/>
+    <!-- Step 6: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
@@ -99,6 +107,7 @@
       android:name="list_type"
       app:argType="edu.cnm.deepdive.spaceseek.controller.ListFragment$ListType"
       android:defaultValue="BIRTHDAY"/>
+    <!-- Step 7: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
@@ -110,6 +119,7 @@
     android:id="@+id/settings_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.SettingsFragment"
     tools:layout="@layout/fragment_settings">
+    <!-- Step 8: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
