--- a/app/src/main/res/menu/main_options.xml
+++ b/app/src/main/res/menu/main_options.xml
@@ -6,10 +6,9 @@
   <item
     android:id="@+id/sign_out"
     android:title="@string/sign_out_title"
+    android:icon="@drawable/sign_out"
+    app:showAsAction="ifRoom"/>
 
-    app:showAsAction=""/>
-
-  <!-- insert in sign_out section under title with a drawable reference__ android:icon="@drawable/"-->
 
 
 </menu>
