--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,6 +9,9 @@
     android:id="@+id/calendar_view"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
+    app:cv_scrollPaged="true"
+    app:cv_dayViewResource="@layout/day_calendar"
+    app:cv_monthHeaderResource="@layout/header_calendar"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
