Integrated missing code from original Nasaapod into ImageFragment and updated code to pass apodId.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
     </item>
   </style>
 
+  <!--  Calendar Styles -->
   <style name="CalendarDay">
     <item name="android:background">?android:selectableItemBackgroundBorderless</item>
   </style>
