--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -54,6 +54,12 @@
     android:id="@+id/image_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.ImageFragment"
     tools:layout="@layout/fragment_image">
+
+    <argument
+      android:name="apodId"
+      app:argType="long"
+      android:defaultValue="0"/>
+
     <!-- Step 4: User can navigate to other sections from here -->
     <action
       android:id="@+id/navigate_to_favorites_fragment"
@@ -72,24 +78,31 @@
   <!-- CalendarFragment -->
   <fragment
     android:id="@+id/calendar_fragment"
+    android:label="@string/app_name"
     android:name="edu.cnm.deepdive.spaceseek.controller.CalendarFragment"
     tools:layout="@layout/fragment_calendar">
+
     <!-- Step 5: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
       app:destination="@id/image_fragment"
       app:popUpTo="@id/image_fragment"/>
+    <argument
+      android:name="apod_id"
+      app:argType="long"/>
   </fragment>
 
   <!-- ListFragment for Favorites -->
   <fragment
     android:id="@+id/favorites_fragment"
     android:name="edu.cnm.deepdive.spaceseek.controller.ListFragment"
-    tools:layout="@layout/fragment_list">
+    android:label="Settings"
+    tools:layout="@layout/fragment_image">
     <argument
       android:name="list_type"
       app:argType="edu.cnm.deepdive.spaceseek.controller.ListFragment$ListType"
-      android:defaultValue="FAVORITES"/>
+      android:defaultValue="FAVORITES"
+      tools:layout="@layout/fragment_image"/>
     <!-- Step 6: User can return to ImageFragment -->
     <action
       android:id="@+id/navigate_to_image_fragment"
