Updated wireframe, added colors, and added methods to fetch and generate bday journey list. 2050

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,13 @@
     android:id="@+id/bottom_navigation_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/windowBackground"
     app:layout_constraintBottom_toBottomOf="parent"
     app:menu="@menu/main_nav"
-    />
+    app:itemIconTint="@color/navigation_item_icon_tint"
+    app:itemTextColor="@color/nebula_black"
+    app:labelVisibilityMode="labeled"
+    android:elevation="8dp"/>
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/show_random"
